Closed
Bug 1869692
Opened 2 years ago
Closed 2 years ago
https://mdn.github.io/dom-examples/webgpu-render-demo/ WebGPU is not rendered
Categories
(Core :: Graphics: WebGPU, defect)
Core
Graphics: WebGPU
Tracking
()
RESOLVED
FIXED
122 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox120 | --- | unaffected |
| firefox121 | --- | unaffected |
| firefox122 | --- | fixed |
People
(Reporter: sotaro, Assigned: sotaro)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
The webgpu-render-demo/ did WebGPU rendering only once. It was not used by WebRender.
| Assignee | ||
Updated•2 years ago
|
Keywords: regression
Regressed by: 1858361
| Assignee | ||
Updated•2 years ago
|
Assignee: nobody → sotaro.ikeda.g
| Assignee | ||
Comment 1•2 years ago
•
|
||
By Bug 1858361 fix, first WebGPU rendering becomes not rendered. It happens because CanvasContext::MaybeQueueSwapChainPresent() is called before CanvasContext::InitializeCanvasRenderer().
| Assignee | ||
Comment 2•2 years ago
|
||
Comment 3•2 years ago
|
||
Set release status flags based on info from the regressing bug 1858361
status-firefox120:
--- → unaffected
status-firefox121:
--- → unaffected
status-firefox122:
--- → affected
status-firefox-esr115:
--- → unaffected
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7af51753aaca
Handle a case that WebGPU rendering happens before CanvasContext::InitializeCanvasRenderer() call r=webgpu-reviewers,nical
Updated•2 years ago
|
Blocks: webgpu-apps
Comment 5•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•