Bug 1869692 - Handle a case that WebGPU rendering happens before CanvasContext::InitializeCanvasRenderer() call r=webgpu-reviewers,nical

By Bug 1858361 fix, first WebGPU rendering becomes not rendered. It happens because CanvasContext::MaybeQueueSwapChainPresent() is called before CanvasContext::InitializeCanvasRenderer().

The change handles it.

Differential Revision: https://phabricator.services.mozilla.com/D196253